# sperax-rm01

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml  walk.py
docs/: index.html  sperax-rm01.js
examples/: ble_listen.py  ble_scan.py  clone_pad.py  probe.py  probe2.py  test_commands.py
sperax_rm01/: __init__.py  cli.py  pad.py  protocol.py
