[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sperax-rm01"
version = "0.1.0"
description = "BLE control library for the Sperax RM-01 walking pad"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Brewer" },
]
keywords = ["ble", "bluetooth", "walking-pad", "sperax", "fitness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
]

[project.urls]
Homepage = "https://github.com/nathanabrewer/sperax-rm01"
Repository = "https://github.com/nathanabrewer/sperax-rm01"

[project.scripts]
sperax-walk = "sperax_rm01.cli:main"
